--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,15 +82,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Proxima
+      fonts:
+        - asset: assets/fonts/Proxima-Nova-SBold.ttf
+        # - asset: fonts/Schyler-Italic.ttf
+        #   style: italic
+    - family: Proxima Bold
+      fonts:
+        - asset: assets/fonts/Proxima-Nova-Bold.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
